tests/ui/consts/const-eval/ub-slice-get-unchecked.stderr
error[E0080]: evaluation panicked: slice::get_unchecked requires that the range is within the slice (range:{start}..{end}, len:{len})
  --> $DIR/ub-slice-get-unchecked.rs:7:27
   |
LL | const B: &[()] = unsafe { A.get_unchecked(3..1) };
   |                           ^^^^^^^^^^^^^^^^^^^^^ evaluation of `B` failed inside this call
   |
note: inside `<std::ops::Range<usize> as SliceIndex<[T]>>::get_unchecked::precondition_check::compiletime`
  --> $SRC_DIR/core/src/slice/index.rs:LL:COL
note: inside `core::panicking::panic_nounwind`
  --> $SRC_DIR/core/src/panicking.rs:LL:COL
   = note: this error originates in the macro `assert_unsafe_precondition` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
